# lora-mqtt-bridge

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/rules/: lora-mqtt-bridge.mdc  multitech-gateway.mdc  python-coding-standards.mdc
.github/workflows/: ci.yml
docs/: api-reference.md  configuration.md  cursor-agent-guide.md  filtering.md  index.md
mlinux-6/: README.md  build-tarball.sh  pyproject.toml  requirements.txt  status.json
mlinux-6/src/lora_mqtt_bridge/: __init__.py  bridge.py  main.py
mlinux-6/src/lora_mqtt_bridge/clients/: base.py  remote.py
mlinux-6/src/lora_mqtt_bridge/filters/: field_filter.py  message_filter.py
mlinux-6/src/lora_mqtt_bridge/models/: __init__.py  config.py  message.py
mlinux-6/src/lora_mqtt_bridge/utils/: config_loader.py  logging_setup.py  status_writer.py  system_info.py
mlinux-6/tests/: __init__.py  conftest.py  test_bridge.py  test_filters.py  test_models.py  test_status_writer.py
mlinux-7/: README.md  build-tarball.sh  pyproject.toml  requirements.txt  status.json
mlinux-7/src/lora_mqtt_bridge/: __init__.py  bridge.py  main.py
mlinux-7/src/lora_mqtt_bridge/clients/: base.py  remote.py
mlinux-7/src/lora_mqtt_bridge/filters/: __init__.py  field_filter.py  message_filter.py
mlinux-7/src/lora_mqtt_bridge/models/: config.py
mlinux-7/src/lora_mqtt_bridge/services/: __init__.py
mlinux-7/src/lora_mqtt_bridge/utils/: logging_setup.py  status_writer.py
mlinux-7/tests/: __init__.py  test_bridge.py  test_filters.py
prompts/: cursor-init.md  prompts-1.txt  session-2025-12-13-lora-mqtt-bridge.md
src/lora_mqtt_bridge/: __main__.py  bridge.py  main.py
src/lora_mqtt_bridge/clients/: base.py  local.py  remote.py
src/lora_mqtt_bridge/filters/: field_filter.py  message_filter.py
src/lora_mqtt_bridge/models/: config.py  message.py
src/lora_mqtt_bridge/utils/: __init__.py  config_loader.py  logging_setup.py  status_writer.py  system_info.py
tests/: INTEGRATION_TESTS.md  conftest.py  test_bridge.py  test_clients.py  test_config_loader.py  test_filters.py  test_models.py
ubuntu/: pyproject.toml
ubuntu/config/: example-config.json  example-filtered-config.json
ubuntu/docs/: configuration.md  deployment.md  filtering.md  getting-started.md  topics.md
ubuntu/src/lora_mqtt_bridge/: __init__.py
ubuntu/src/lora_mqtt_bridge/clients/: __init__.py
ubuntu/src/lora_mqtt_bridge/filters/: message_filter.py
ubuntu/src/lora_mqtt_bridge/models/: config.py  message.py
ubuntu/src/lora_mqtt_bridge/utils/: config_loader.py  system_info.py
ubuntu/tests/: __init__.py  conftest.py  test_bridge.py  test_config_loader.py  test_filters.py  test_models.py
