[build-system]
requires = ["setuptools>=40.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lora-mqtt-bridge"
version = "1.0.0"
description = "A Python application to bridge MQTT messages from a local broker to multiple remote MQTT brokers with filtering capabilities"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Multitech Systems Inc"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Communications",
    "Topic :: Internet",
]
dependencies = [
    "paho-mqtt>=1.6.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]

[project.scripts]
lora-mqtt-bridge = "lora_mqtt_bridge.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
